# ships-detection

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.py
src/: config.json  views.py
src/ship_detection/: __init__.py  arg_parser.py  authenticate.py  detecting.py  extract_points.py  layout.py  masks.py  regions.py
src/ship_detection.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
